--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <!-- ============ SINGLE VIDEO SECTION ============ -->
   <section class="single-video-section">
     <video autoplay loop muted playsinline class="full-width-video">
-      <source src="hero.mp4" type="video/mp4">
+      <source src="public/hero.mp4" type="video/mp4">
     </video>
   </section>
 
