--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </h1>
         
         <div class="hero-details">
-          <p class="detail-line detail-date">2ND NOVEMBER, SATURDAY</p>
+          <p class="detail-line detail-date">15th NOVEMBER, SATURDAY</p>
           <p class="detail-line detail-time">2 PM ONWARDS</p>
           <p class="detail-line detail-venue">Raahi Neo Kitchen & Bar</p>
         </div>
@@ -51,7 +51,7 @@
         <div class="pill-container">
           <div class="pill">
             <span class="pill-icon">📅</span>
-            <span>2nd Nov, 2 PM</span>
+            <span>15th Nov, 2 PM</span>
           </div>
           <div class="pill">
             <span class="pill-icon">📍</span>
@@ -130,7 +130,7 @@
             <span class="faq-toggle">▼</span>
           </button>
           <div class="faq-answer">
-            <p>Tickets will go live on 5th November at 5 PM IST. Early bird tickets will be available at a discounted rate. Click the "Buy Passes" button when the countdown ends.</p>
+            <p>Tickets will go live. Early bird tickets will be available at a discounted rate. Click the "Buy Passes" button when the countdown ends.</p>
           </div>
         </div>
 
@@ -174,7 +174,7 @@
             <span class="faq-toggle">▼</span>
           </button>
           <div class="faq-answer">
-            <p>Refunds are available up to 24 hours before the event. Contact us via Instagram DM @bit_freshers_2025 with your ticket details. No refunds on the event day.</p>
+            <p>Contact us via Instagram DM @bit_freshers_2025 with your ticket details. No refunds on the event day.</p>
           </div>
         </div>
       </div>
