--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
     </div>
   </section>
 
+  <!-- ============ VIDEO SECTION ============ -->
+  <section id="video" class="video-section">
+    <div class="video-container">
+      <video 
+        class="hero-video" 
+        autoplay 
+        muted 
+        loop 
+        playsinline
+        aria-label="Hero video showcasing the Los Santos Freshers'25 party">
+        <source src="hero.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </section>
+
   <!-- ============ ABOUT SECTION ============ -->
   <section id="about" class="about">
     <div class="container">
@@ -83,7 +99,7 @@
   <!-- ============ COUNTDOWN SECTION ============ -->
   <section id="countdown" class="countdown">
     <div class="container">
-      <h2 class="section-title gta-title" id="countdownTitle">EARLY BIRD TICKETS LAUNCHING IN...</h2>
+      <h2 class="section-title gta-title" id="countdownTitle">PARTY STARTS IN...</h2>
 
       <div class="countdown-display" id="countdownDisplay">
         <div class="countdown-box">
