--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Los Santos Freshers'25 - GTA 3 Themed Party | 2nd Nov | Raahi Neo Kitchen & Bar">
+  <meta name="description" content="Los Santos Freshers'25 - GTA 3 Themed Party | 15th Nov | Cahoots">
   <meta property="og:title" content="Los Santos Freshers'25">
-  <meta property="og:description" content="Experience the neon streets of Vice City | 2nd November at Raahi Neo Kitchen & Bar">
+  <meta property="og:description" content="Experience the neon streets of Vice City | 15th November at Cahoots">
   <meta property="og:image" content="/assets/og-image.jpg">
   <title>Los Santos Freshers'25 - GTA Themed Party</title>
   <link rel="stylesheet" href="styles.css">
@@ -35,7 +35,7 @@
         <div class="hero-details">
           <p class="detail-line detail-date">15th NOVEMBER, SATURDAY</p>
           <p class="detail-line detail-time">2 PM ONWARDS</p>
-          <p class="detail-line detail-venue">Raahi Neo Kitchen & Bar</p>
+          <p class="detail-line detail-venue">Cahoots Bangalore</p>
         </div>
 
         <div class="hero-cta-wrapper">
@@ -55,7 +55,7 @@
           </div>
           <div class="pill">
             <span class="pill-icon">📍</span>
-            <span>Raahi Neo Kitchen</span>
+            <span>Cahoots Bangalore</span>
           </div>
         </div>
       </div>
@@ -168,7 +168,7 @@
             <span class="faq-toggle">▼</span>
           </button>
           <div class="faq-answer">
-            <p>Entry is open to all students with valid college IDs. Age restrictions apply as per venue policy (18+). Please carry a valid government ID for verification.</p>
+            <p>Club Policy</p>
           </div>
         </div>
 
@@ -190,7 +190,7 @@
             <span class="faq-toggle">▼</span>
           </button>
           <div class="faq-answer">
-            <p>Contact us via Instagram DM @bit_freshers_2025 with your ticket details. No refunds on the event day.</p>
+            <p>No refunds will be given.</p>
           </div>
         </div>
       </div>
